// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Act II economy tuning > generates deterministic Act II reward, vault, and shop surfaces from fresh save context > fresh act II economy 1`] = `
{
  "act": {
    "id": "act_core_descent",
    "label": "Act II",
    "priceAdjustment": 1,
    "rewardTier": "escalated",
  },
  "eliteRewards": [
    [
      "item_claimant_arc_seal",
      "elite source",
    ],
    [
      "item_salvage_dividend_chip",
      "Elite pool",
    ],
    [
      "item_parallax_echo_lattice",
      "lunar source",
    ],
  ],
  "rerollCosts": [
    3,
    4,
  ],
  "shop": {
    "count": 3,
    "items": [
      [
        "item_harmonic_fork_loom",
        16,
        "boss source",
      ],
      [
        "item_empty_hand_repeater",
        22,
        "boss source",
      ],
      [
        "item_credit_reroute_fuse",
        15,
        "Shop pool",
      ],
    ],
  },
  "vaultRewards": [
    [
      "item_plasma_bloom_filter",
      "vault source",
    ],
    [
      "item_phase_wake_suture",
      "vault source",
    ],
    [
      "item_warhead_echo_chamber",
      "vault source",
    ],
  ],
}
`;

exports[`Act II economy tuning > generates deterministic progressed-save Act II economy without changing upgrade accounting > progressed act II economy 1`] = `
{
  "act": {
    "id": "act_core_descent",
    "label": "Act II",
    "priceAdjustment": 1,
    "rewardTier": "escalated",
  },
  "eliteRewards": [
    [
      "item_claimant_arc_seal",
      "elite source",
    ],
    [
      "item_salvage_dividend_chip",
      "Elite pool",
    ],
    [
      "item_parallax_echo_lattice",
      "lunar source",
    ],
  ],
  "rerollCosts": [
    3,
    4,
  ],
  "shop": {
    "count": 4,
    "items": [
      [
        "item_harmonic_fork_loom",
        15,
        "boss source",
      ],
      [
        "item_empty_hand_repeater",
        21,
        "boss source",
      ],
      [
        "item_credit_reroute_fuse",
        14,
        "Shop pool",
      ],
      [
        "item_laser_tax_stamp",
        18,
        "Shop pool",
      ],
    ],
  },
  "vaultRewards": [
    [
      "item_plasma_bloom_filter",
      "vault source",
    ],
    [
      "item_phase_wake_suture",
      "vault source",
    ],
    [
      "item_warhead_echo_chamber",
      "vault source",
    ],
    [
      "item_overkill_ledger",
      "vault source",
    ],
  ],
}
`;

exports[`Act II economy tuning > keeps inter-act junction effects deterministic for fresh and progressed saves > fresh junction economy effects 1`] = `
[
  {
    "effects": {
      "creditsDelta": -4,
      "curseDelta": 0,
      "hullPatchDelta": 1,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shipRefit": {
        "bombCapacityDelta": 0,
        "hitRadiusDelta": 0,
        "specialChargeMultiplierDelta": 0,
        "speedDelta": 0,
      },
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-1-repair",
    "kind": "repair",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shipRefit": {
        "bombCapacityDelta": 1,
        "hitRadiusDelta": 0,
        "specialChargeMultiplierDelta": 0.25,
        "speedDelta": 0,
      },
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-2-ordnance",
    "kind": "ordnance",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shipRefit": {
        "bombCapacityDelta": 0,
        "hitRadiusDelta": -2,
        "specialChargeMultiplierDelta": 0,
        "speedDelta": 40,
      },
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-3-vector",
    "kind": "vector",
  },
]
`;

exports[`Act II economy tuning > keeps inter-act junction effects deterministic for fresh and progressed saves > progressed junction economy effects 1`] = `
[
  {
    "effects": {
      "creditsDelta": -3,
      "curseDelta": 0,
      "hullPatchDelta": 1,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shipRefit": {
        "bombCapacityDelta": 0,
        "hitRadiusDelta": 0,
        "specialChargeMultiplierDelta": 0,
        "speedDelta": 0,
      },
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-1-repair",
    "kind": "repair",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shipRefit": {
        "bombCapacityDelta": 1,
        "hitRadiusDelta": 0,
        "specialChargeMultiplierDelta": 0.25,
        "speedDelta": 0,
      },
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-2-ordnance",
    "kind": "ordnance",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shipRefit": {
        "bombCapacityDelta": 0,
        "hitRadiusDelta": -2,
        "specialChargeMultiplierDelta": 0,
        "speedDelta": 40,
      },
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-3-vector",
    "kind": "vector",
  },
]
`;
